infinimal theme and fixes

--- a/kimai2/kimai-default.ini
+++ b/kimai2/kimai-default.ini
@@ -5,9 +5,12 @@ Information=Rainmeter skin for kimai. | Read the documentation on Github: https:
 License=MIT
 Version=0.0.1
 
+[Variables]
+activeRecording=Click Kimai to setup
+serverUrl=[!CommandMeasure MeasureFirstrun "Run"]
+
 @include=kimaiVars.inc
 
-[Variables]
 ;The path to kimai
 kimaiDir=#@#kimai2-cmd
 kimaiExe=#kimaiDir#\kimai2-cmd.exe
@@ -76,48 +79,8 @@ FontFace=#fontName#
 AntiAlias=1
 ClipString=0
 
+@include=kimaiMeasures.inc
 
-
-; -------------------------------------------------------------------------- 
-;                                  MEASURES                                  
-; -------------------------------------------------------------------------- 
-
-[MeasureStart]
-Measure=Plugin
-Plugin=RunCommand
-Program=#kimaiExe#
-Parameter=restart #measurementid#
-StartInFolder=#kimaiDir#
-DynamicVariables=1
-FinishAction=[!CommandMeasure MeasureReload "Run"]
-State=Hide
-
-; Uncomment for logging
-; OutputFile=#CURRENTPATH#log.txt
-; OutputType=UTF8
-
-[MeasureStop]
-Measure=Plugin
-Plugin=RunCommand
-Program=#kimaiExe#
-Parameter=stop
-StartInFolder=#kimaiDir#
-FinishAction=[!SetVariable stopHidden 1][!SetVariable startHidden 0][!CommandMeasure MeasureReload "Run"]
-State=Hide
-
-
-[MeasureReload]
-Measure=Plugin
-Plugin=RunCommand
-Program=#kimaiExe#
-Parameter=rainmeter
-StartInFolder=#kimaiDir#
-FinishAction=[!showmeter meterRefreshButton][!Refresh]
-State=Hide
-
-; Uncomment for logging
- OutputFile=#CURRENTPATH#log.txt
- OutputType=UTF8
 ; -------------------------------------------------------------------------- 
 ;                                   METERS                                   
 ; -------------------------------------------------------------------------- 
@@ -142,7 +105,7 @@ H=39
 PreserveAspectRatio=1
 DynamicVariables=1
 Hidden=#startHidden#
-leftmouseupaction=[!CommandMeasure MeasureStart "Run"]
+leftmouseupaction=[!hidemeter meterStartButton][!CommandMeasure MeasureStart "Run"]
 
 [meterStopButton]
 Meter=Image
@@ -154,7 +117,7 @@ H=39
 PreserveAspectRatio=1
 DynamicVariables=1
 Hidden=#stopHidden#
-leftmouseupaction=[!CommandMeasure MeasureStop "Run"]
+leftmouseupaction=[!hidemeter meterStopButton][!CommandMeasure MeasureStop "Run"]
 
 [meterRefreshButton]
 Meter=Image
