started working on duration support

--- a/kimai2/infinibar.ini
+++ b/kimai2/infinibar.ini
@@ -4,10 +4,12 @@ Author=infeeeee
 Information=All settings are in the Variables.inc file | More info at github: https://github.com/infeeeee/infinibar, Created by UNIGHT(http://unight.deviantart.com/) modded by DISCONNECTVD (http://dscnctvd.deviantart.com/)
 License=MIT
 Version=0.0.1
+Update=1000
 
 [Variables]
 activeRecording=Click KIM to setup
 serverUrl=[!CommandMeasure MeasureFirstrun "Run"]
+activeDur=''
 
 @include=kimaiVars.inc
 
@@ -100,7 +102,7 @@ leftmouseupaction=[!hidemeter meterRefreshButton][!CommandMeasure MeasureReload 
 [meterCurrentProject]
 Meter=String
 MeterStyle=styleSmallCenter
-Text=#activeRecording#
+Text=[MeasureDuration] #activeRecording#
 DynamicVariables=1
 ClipString=1
 Y=#barY#
