fixed invisible height in infinibar

--- a/kimai2/infinibar.ini
+++ b/kimai2/infinibar.ini
@@ -16,6 +16,7 @@ activeDur=''
 iconW=18
 iconH=18
 iconY=(#tempY#+#iconH#/3)
+projectY=0
 
 ;The path to kimai
 kimaiDir=#@#kimai2-cmd
@@ -30,7 +31,7 @@ StringAlign=Left
 FontColor=#colorText#
 FontSize=(Floor(18*#fontSizeMult#))
 X=(#fullWidth#+10)
-Y=24r
+Y=#projectY#
 StringCase=None
 StringStyle=Normal
 StringEffect=None
@@ -44,6 +45,11 @@ SolidColor=#colorBarBackground#
 ; ----------------------------------
 ; METERS display images, text, bars, etc.
 ; ----------------------------------
+
+[meterBg]
+Meter=Image
+meterStyle=styleBg
+H=(#fullHeightHDD#)
 
 [meterTitle]
 Meter=String
@@ -102,16 +108,12 @@ leftmouseupaction=[!hidemeter meterRefreshButton][!CommandMeasure MeasureReload 
 [meterCurrentProject]
 Meter=String
 MeterStyle=styleSmallCenter
-Text=[MeasureDuration] #activeRecording#
+; Text=[MeasureDuration] #activeRecording#
+Text=#activeRecording#
 DynamicVariables=1
 ClipString=1
 Y=#barY#
 H=(#smallH#*2+4)
-leftmouseupaction=[!SetVariable MenuVis '0'][!SetVariable activeRecording Select]
-
-[meterBg]
-Meter=Image
-meterStyle=styleBg
-H=(#fullHeightHDD#)
+leftmouseupaction=[!SetVariable projectY 24r][!SetVariable MenuVis '0'][!SetVariable activeRecording Select]
 
 @include=kimaiData.inc
