working timer, added documentation

--- a/kimai2/kimai-default.ini
+++ b/kimai2/kimai-default.ini
@@ -133,9 +133,9 @@ leftmouseupaction=[!hidemeter meterRefreshButton][!CommandMeasure MeasureReload 
 Meter=String
 MeterStyle=styleSelected
 W=250
-Text=#activeRecording#
+Text=[MeasureActiveTime]#activeRecording#
 DynamicVariables=1
-ClipString=0
+ClipString=1
 leftmouseupaction=[!SetVariable MenuVis '0'][!SetVariable activeRecording Select]
 
 @include=kimaiData.inc
