--- a/kimai2/infinibar.ini
+++ b/kimai2/infinibar.ini
@@ -1,15 +1,13 @@
 [Metadata]
 Name=kimai2-cmd-rainmeter infinibar
 Author=infeeeee
-Information=All settings are in the Variables.inc file | More info at github: https://github.com/infeeeee/infinibar, Created by UNIGHT(http://unight.deviantart.com/) modded by DISCONNECTVD (http://dscnctvd.deviantart.com/)
+Information=All settings are in the Variables.inc file | More info at github: https://github.com/infeeeee/infinibar
 License=MIT
 Version=0.0.1
-Update=1000
 
 [Variables]
 activeRecording=Click KIM to setup
 serverUrl=[!CommandMeasure MeasureFirstrun "Run"]
-activeDur=''
 
 @include=kimaiVars.inc
 
@@ -108,8 +106,7 @@ leftmouseupaction=[!hidemeter meterRefreshButton][!CommandMeasure MeasureReload 
 [meterCurrentProject]
 Meter=String
 MeterStyle=styleSmallCenter
-; Text=[MeasureDuration] #activeRecording#
-Text=#activeRecording#
+Text=[MeasureActiveTime]#activeRecording#
 DynamicVariables=1
 ClipString=1
 Y=#barY#
