--- a/kimai2/infinibar.ini
+++ b/kimai2/infinibar.ini
@@ -3,7 +3,7 @@ Name=kimai2-cmd-rainmeter infinibar
 Author=infeeeee
 Information=All settings are in the Variables.inc file | More info at github: https://github.com/infeeeee/infinibar
 License=MIT
-Version=0.0.3
+Version=0.0.4
 
 [Variables]
 activeRecording=Click KIM to setup
@@ -15,6 +15,7 @@ iconW=18
 iconH=18
 iconY=(#tempY#+#iconH#/3)
 projectY=0
+projectX=0
 
 ;The path to kimai
 kimaiDir=#@#kimai2-cmd
@@ -28,7 +29,7 @@ MenuVis=1
 StringAlign=Left
 FontColor=#colorText#
 FontSize=(Floor(18*#fontSizeMult#))
-X=(#fullWidth#+10)
+X=#projectX#
 Y=#projectY#
 StringCase=None
 StringStyle=Normal
@@ -52,7 +53,6 @@ H=(#fullHeightHDD#)
 [meterTitle]
 Meter=String
 MeterStyle=styleTitle
-W=250
 Text=KIM
 leftmouseupaction=#serverUrl#
 
@@ -63,10 +63,6 @@ MeterStyle=styleTemp
 W=#iconW#
 H=#iconH#
 Y=#iconY#
-; X=105
-; Y=0
-; W=39
-; H=39
 PreserveAspectRatio=1
 DynamicVariables=1
 Hidden=#startHidden#
@@ -79,10 +75,6 @@ MeterStyle=styleTemp
 W=#iconW#
 H=#iconH#
 Y=#iconY#
-; X=105
-; Y=0
-; W=39
-; H=39
 PreserveAspectRatio=1
 DynamicVariables=1
 Hidden=#stopHidden#
@@ -96,10 +88,6 @@ X=(#valueX#-#iconW#)
 W=#iconW#
 H=#iconH#
 Y=#iconY#
-; X=150
-; Y=0
-; W=39
-; H=39
 PreserveAspectRatio=1
 leftmouseupaction=[!hidemeter meterRefreshButton][!CommandMeasure MeasureReload "Run"]
 
@@ -111,6 +99,11 @@ DynamicVariables=1
 ClipString=1
 Y=#barY#
 H=(#smallH#*2+4)
-leftmouseupaction=[!SetVariable projectY 24r][!SetVariable MenuVis '0'][!SetVariable activeRecording Select]
+leftmouseupaction=[!SetVariable projectY 24r][!SetVariable projectX (#fullWidth#+10)][!SetVariable MenuVis '0'][!SetVariable activeRecording Select]
+
+[meterDummyPos]
+Meter=String
+Y=-17
+H=0
 
 @include=kimaiData.inc
